--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion COMPILE_SDK_VERSION as int
@@ -34,4 +35,8 @@ dependencies {
     compile "com.google.dagger:dagger:$DAGGER_VERSION"
     compile "com.google.dagger:dagger-android-support:$DAGGER_VERSION" // if you use the support libraries
     annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$KOTLIN_VERSION"
+}
+repositories {
+    mavenCentral()
 }
