--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,9 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+# Plugin versions
+KOTLIN_VERSION=1.2.21
+
 # Build versions
 COMPILE_SDK_VERSION=27
 BUILD_TOOLS_VERSION=27.0.3
@@ -23,4 +26,4 @@ MIN_SDK_VERSION=19
 TARGET_SDK_VERSION=27
 
 # Dependency versions
-SUPPORT_LIB_VERSION=26.0.0-alpha1
+SUPPORT_LIB_VERSION=27.0.2
