--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 # Plugin versions
-KOTLIN_VERSION=1.2.21
+KOTLIN_VERSION=1.2.30
 
 # Build versions
 COMPILE_SDK_VERSION=27
@@ -27,3 +27,5 @@ TARGET_SDK_VERSION=27
 
 # Dependency versions
 SUPPORT_LIB_VERSION=27.1.0
+
+android.databinding.enableV2=true
