integration of `android_tools`

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply from: "$project.rootDir/tools/quality/quality.gradle"
 
 android {
     compileSdkVersion COMPILE_SDK_VERSION as int
