--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'io.fabric'
 apply from: "$project.rootDir/tools/quality/quality.gradle"
 
 android {
@@ -43,6 +44,7 @@ dependencies {
     final RX_ANDROID_VERSION = '2.0.2'
     final JUNIT_VERSION = '4.12'
     final MOCKITO_VERSION = '2.17.0'
+    final FABRIC_VERSION = '2.9.1'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -66,10 +68,13 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$KOTLIN_VERSION"
 
-    kapt "com.android.databinding:compiler:$DATA_BINDING_VERSION"
-
     implementation "io.reactivex.rxjava2:rxjava:$RX_JAVA_VERSION"
+    testImplementation "io.reactivex.rxjava2:rxjava:$RX_JAVA_VERSION"
     implementation "io.reactivex.rxjava2:rxandroid:$RX_ANDROID_VERSION"
+
+    implementation("com.crashlytics.sdk.android:crashlytics:$FABRIC_VERSION@aar") {
+        transitive = true
+    }
 }
 repositories {
     mavenCentral()
