rename the container folder of kotlin source files

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
         }
     }
     sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
         androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
     dataBinding {
